Updated font-family to more readable style. Removed address and phone information from PDF files to avoid web scrapers.

--- a/assets/css/vitae.css
+++ b/assets/css/vitae.css
@@ -127,7 +127,7 @@
 
 	body, input, select, textarea {
 		color: #888;
-		font-family: "Source Sans Pro", sans-serif;
+		font-family: "PT Serif", sans-serif;
 		font-size: 14pt;
 		font-weight: 300;
 		line-height: 2;
